--- a/pycalphad/06 Liquidus.ipynb
+++ b/pycalphad/06 Liquidus.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "# Liquidus Temperature\n",
-    "The liquidus temperature is a thermodynamic quantity which is defined to exist at the onset of liquid formation. The liquidus temperature is a strong function of temperature in most alloys. We can compute the liquidus temperature by \"fixing\" the liquid phase to be stable with zero amount. This ensures the liquid phase will be on the minimum-energy hyperplane for any converged solution. We then use the energy minimizer to find a temperature which satisfies all the constraints. Note that, in general, there may be multiple (or zero) solutions to a fixed-phase condition, and they tend to be sensitive to choice of starting point."
+    "The liquidus temperature is a thermodynamic quantity which is defined to exist at the onset of solid formation. The liquidus temperature is a strong function of temperature in most alloys. We can compute the liquidus temperature by \"fixing\" the solid phase to be stable with zero amount, in coexistence with the liquid. This ensures the liquid phase will be on the minimum-energy hyperplane for any converged solution. We then use the energy minimizer to find a temperature which satisfies all the constraints. Note that, in general, there may be multiple (or zero) solutions to a fixed-phase condition, and they tend to be sensitive to choice of starting point."
    ]
   },
   {
@@ -45,10 +45,10 @@
     "composition_sets = [\n",
     "                    composition_set(dbf, comps, 'LIQUID',\n",
     "                                    {**state_variables, v.T: 1000},\n",
-    "                                    fixed=True, phase_amt=0,\n",
+    "                                    phase_amt=1,\n",
     "                                   ),\n",
     "                    composition_set(dbf, comps, 'BCC_A2',\n",
-    "                                    {**state_variables, v.T: 1000}, phase_amt=1,\n",
+    "                                    {**state_variables, v.T: 1000}, fixed=True, phase_amt=0,\n",
     "                                   ),  \n",
     "                   ]\n",
     "\n",
@@ -69,7 +69,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -83,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
